--- a/arch/arm64/boot/dts/exynos/exynos9825-rmem.dtsi
+++ b/arch/arm64/boot/dts/exynos/exynos9825-rmem.dtsi
@@ -9,9 +9,9 @@
  * published by the Free Software Foundation.
  */
 
-#include "../../../../../include/generated/autoconf.h"
+#include <generated/autoconf.h>
 #include <dt-bindings/soc/samsung/debug-snapshot-table.h>
-#include <dt-bindings/soc/samsung/exynos9825-seclog.h>
+#include <dt-bindings/soc/samsung/exynos9820-seclog.h>
 
 / {
 	ion-hpa-heap {
