ARM64: boot: dts: f62: Sync with previous decompiled dts and make it build
Change-Id: I2397d22860d07e7e0a64061852b416a0e037b904

--- a/arch/arm64/boot/dts/samsung/battery_data_f62_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/battery_data_f62_common.dtsi
@@ -33,6 +33,7 @@
 				charger,dchg_min_current = <2000>;
 				charger,dchg_temp_low_threshold = <150>;
 				charger,dchg_temp_high_threshold = <420>;
+				charger,dchg_min_vbat = <3400>;
 
 				charger,ta_alert_wa;
 			};
