--- a/arch/arm64/boot/dts/samsung/exynos9825-m62_input_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9825-m62_input_common.dtsi
@@ -600,13 +600,13 @@
 	samsung,reset-before-trans;
 	tsp_lsi: touchscreen@48 {
 		status = "ok";
-		compatible = "slsi,slsi_ts";
+		compatible = "sec,sec_ts";
 		reg = <0x48>;
 		pinctrl-names = "on_state", "off_state";
 		pinctrl-0 = <&attn_irq>;
 		pinctrl-1 = <&attn_input>;
-		tsp_io_ldo-supply = "tsp_io_ldo";
-		tsp_avdd_ldo-supply = "tsp_avdd_ldo";
+		sec,regulator_dvdd = "tsp_io_ldo";
+		sec,regulator_avdd = "tsp_avdd_ldo";
 		sec,irq_gpio = <&gpa1 0 0>;
 		sec,regulator_boot_on;
 		sec,tclm_level = <2>;
@@ -621,10 +621,11 @@
 		support_ear_detect_mode;
 //		sync-reportrate-120;
 		support_open_short_test;
+		override_use_sponge;
 
 		/* This part is for firmware */
 		sec,project_name = "F62", "E625";
-		sec,firmware_name = "tsp_slsi/y771_f62.bin";
+		sec,firmware_name = "tsp_sec/y771_f62.bin";
 //		sec,bringup = <3>;
 	};
 };
