ARM64: boot: dts: exynos9820: Sync with previous decompiled dts
Change-Id: I80aaf7a4d4959068b0bd451d514f91cd1cb9f4be

--- a/arch/arm64/boot/dts/exynos/exynos9820-mfc.dtsi
+++ b/arch/arm64/boot/dts/exynos/exynos9820-mfc.dtsi
@@ -74,6 +74,7 @@
 				0x0 0x0 0x0 0x8050F215 0x0
 				0x3011 0x0 0x0 0x2D 0xA00
 				0x1D 0xF4240 0x33003300 0x2 0x1>;
+		enc_ts_delta = <0x01 0x211208>;
 
 		/* BW <peak, read, write> : KB/UHD frame */
 		bw_enc_h264 = <62543 75230 13080>;
