--- a/arch/arm64/boot/dts/samsung/battery_data_beyondxlte_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/battery_data_beyondxlte_common.dtsi
@@ -53,6 +53,7 @@
 				battery,chg_temp_check_type = <2>; /* SEC_BATTERY_TEMP_CHECK_TEMP */
 				battery,wpc_temp_check_type = <2>; /* SEC_BATTERY_TEMP_CHECK_TEMP */
 				battery,dchg_temp_check_type = <0>; /* SEC_BATTERY_TEMP_CHECK_NONE for test */
+				battery,lrp_temp_check_type = <0>;
 
 				battery,thermal_source = <2>; /* SEC_BATTERY_THERMAL_SOURCE_ADC */
 				battery,usb_thermal_source = <2>; /* SEC_BATTERY_THERMAL_SOURCE_ADC */
@@ -237,11 +238,11 @@
 				battery,siop_hv_wireless_charging_limit_current = <850>;
 				battery,siop_store_hv_wireless_input_limit_current = <450>;
 
-				battery,ttf_hv_charge_current = <3150>;
-				battery,ttf_hv_12v_wireless_charge_current = <2450>;
-				battery,ttf_hv_wireless_charge_current = <1600>;
-				battery,ttf_wireless_charge_current = <940>;
-				battery,ttf_dc25_charge_current = <4000>;
+				battery,ttf_hv_charge_current = <2800>;
+				battery,ttf_hv_12v_wireless_charge_current = <2300>;
+				battery,ttf_hv_wireless_charge_current = <1430>;
+				battery,ttf_wireless_charge_current = <892>;
+				battery,ttf_dc25_charge_current = <3600>;
 
 				battery,rp_current_rp1 = <500>;
 				battery,rp_current_rp2 = <1500>;
@@ -303,7 +304,7 @@
 				battery,cisd_max_voltage_thr = <4400>; /* battery ovp detection voltage */
 
 				battery,cisd_alg_index = <8>;
-				battery,ignore_cisd_index = <0 640>; /* Do not use AFC_FAIL to DROP_VALUE */
+				battery,ignore_cisd_index = <0 0>; /* Do not use AFC_FAIL to DROP_VALUE */
 				battery,ignore_cisd_index_d = <0 80>; /* Do not use AFC_FAIL_PER_DAY to DROP_VALUE_PER_DAY */
 
 				battery,tx_stop_capacity = <30>;
@@ -330,7 +331,7 @@
 				fuelgauge,capacity_max = <1000>;
 				fuelgauge,capacity_max_margin = <300>;
 				fuelgauge,capacity_min = <0>;
-				fuelgauge,capacity_calculation_type = <28>;
+				fuelgauge,capacity_calculation_type = <92>;
 				fuelgauge,repeated_fuelalert;
 				fuelgauge,using_temp_compensation;
 				fuelgauge,low_temp_limit = <100>;
@@ -342,103 +343,33 @@
 				fuelgauge,sw_v_empty_recover_voltage = <3480>;
 				fuelgauge,fg_resistor = <2>;
 				fuelgauge,capacity = <0x1130>;
+				/* fullcapnom(=capacity), dPacc, dQacc,  rcomp0, tempco */
+				fuelgauge,fg_reset_wa_data = <0x1130 0x3200 0x431 0x32 0x1725>;
 				/*fuelgauge,auto_discharge_en;*/
 				fuelgauge,discharge_temp_threshold = <600>;
 				fuelgauge,discharge_volt_threshold = <4200>;
-				fuelgauge,ttf_capacity = <4400>;
+
+				fuelgauge,lost_soc_trig_soc = <1000>; /* 100.0% */
+				fuelgauge,lost_soc_trig_d_soc = <20>; /* 2% */
+				fuelgauge,lost_soc_trig_scale = <2>; /* 2x */
+				fuelgauge,lost_soc_guarantee_soc = <30>; /* 3.0% */
+				fuelgauge,lost_soc_min_vol = <3200>; /* 3200mV */
+
+				fuelgauge,ttf_capacity = <3830>;
 				fuelgauge,cv_data = <
-					2488	829	1809
-					2409	832	1796
-					2327	837	1769
-					2272	840	1743
-					2182	846	1721
-					2104	850	1690
-					2038	854	1670
-					1950	859	1640
-					1904	861	1622
-					1838	865	1594
-					1797	867	1576
-					1749	870	1560
-					1703	873	1531
-					1683	873	1525
-					1667	875	1515
-					1660	875	1512
-					1653	876	1509
-					1615	878	1502
-					1580	880	1483
-					1553	881	1463
-					1544	882	1458
-					1520	883	1451
-					1477	886	1424
-					1431	888	1409
-					1396	891	1383
-					1347	894	1361
-					1299	896	1332
-					1267	898	1315
-					1231	902	1288
-					1202	904	1263
-					1148	906	1243
-					1109	909	1213
-					1067	911	1185
-					1031	914	1156
-					1013	915	1140
-					975	917	1111
-					961	919	1084
-					921	921	1064
-					892	923	1038
-					887	923	1019
-					863	925	1004
-					833	927	976
-					808	929	946
-					787	930	918
-					780	931	904
-					764	932	895
-					744	934	864
-					730	935	846
-					715	936	828
-					693	937	800
-					681	938	783
-					666	940	752
-					651	941	735
-					640	942	712
-					628	945	697
-					622	946	679
-					618	947	664
-					600	950	646
-					596	951	627
-					589	953	614
-					584	953	601
-					576	956	572
-					577	957	553
-					562	958	535
-					511	968	506
-					505	969	487
-					493	971	464
-					492	972	435
-					484	973	417
-					480	975	398
-					474	976	380
-					470	977	364
-					462	977	355
-					456	978	336
-					452	979	329
-					446	981	303
-					437	982	282
-					429	984	255
-					423	985	242
-					422	986	229
-					414	987	211
-					411	988	199
-					405	989	191
-					397	990	171
-					391	991	140
-					387	992	126
-					384	993	107
-					372	995	84
-					364	997	54
-					356	998	26
-					356	998	13
-					0	1000	0
+					2952	739	2651
+					2868	750	2600
+					2576	775	2488
+					2360	790	2375
+					2132	810	2242
+					1898	835	2088
+					1443	870	1741
+					1223	900	1393
+					860	920	1096
+					683	940	715
+					547	960	327
+					468	981	163
+					436	1000	0
 					>;
 			};
 
@@ -665,6 +596,7 @@
 		battery,fod_hero_5v_data = <150 2 142 (-6) 150 (-20) 150 (-28) 165 185 156 (-39)>;
 		battery,wc_cover_rpp = <0x44>;
 		battery,oc_fod1 = <1100>;
+		battery,tx_gear_min_op_freq_delay = <4000>;
 		battery,wireless20_vout_list = <8>; /* WIRELESS_VOUT_10V*/
 		battery,wireless20_vrect_list = <10>; /* MFC_AFC_CONF_12V_TX*/
 		battery,wireless20_max_power_list = <2>; /* SEC_WIRELESS_RX_POWER_12W*/
