--- a/arch/arm64/boot/dts/samsung/exynos9820-beyond1lte_eur_open_24.dts
+++ b/arch/arm64/boot/dts/samsung/exynos9820-beyond1lte_eur_open_24.dts
@@ -18,8 +18,6 @@
 #include "exynos9820-evt1-beyond1lte_if-pmic-max77705.dtsi"
 #include <dt-bindings/clock/exynos9820.h>
 #include <dt-bindings/pci/pci.h>
-#include "exynos9820-bootargs_ext.dtsi"
-#include "exynos9820-beyond1lte_camera.dtsi"
 #include "exynos9820-beyond1lte_common.dtsi"
 #include "exynos9820-beyond1lte_fingerprint_00.dtsi"
 #include "exynos9820-beyond1lte_eur_open_gpio_04.dtsi"
@@ -314,7 +312,7 @@
         sx9330,adcfiltph0_reg = <0x0510101D>;
         sx9330,afeparamsph1_reg = <0x00001E2F>;  /* again : 9.9pF, sampling freq : 111.11 khz */
         sx9330,adcfiltph1_reg = <0x00104615>;    /* threshold : 2450 */
-        sx9330,avgbfilt_reg = <0x60600C00>;   /* AVGPOSFILT : 1/256, AVGNEGFILT : 1/2 */
+        sx9330,avgbfilt_reg = <0x60600E00>;   /* AVGPOSFILT : 1/256, AVGNEGFILT : 1/2 */
         sx9330,avgafilt_reg = <0x00000000>;
         sx9330,advdig3_reg = <0x00000000>;
         sx9330,advdig4_reg = <0x00000000>;
