--- a/arch/arm64/boot/dts/samsung/exynos9820-beyondx_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9820-beyondx_common.dtsi
@@ -13,6 +13,7 @@
 #include "modem-s5100-dual-sipc-pdata.dtsi"
 #include "modem-s5000ap-dual-sipc-pdata.dtsi"
 #include "exynos9820-beyond2lte_mst.dtsi"
+#include "exynos9820-beyond2lte_mst-pinctrl.dtsi"
 
 / {
 
@@ -2560,8 +2561,8 @@
 		sx9330,afephph0_reg = <0x3FBB8548>;
 		sx9330,adcfiltph0_reg = <0x0510101D>;
 		sx9330,afeparamsph1_reg = <0x00001E0F>;  /* again : 9.9pF, sampling freq : 200 khz */
-		sx9330,adcfiltph1_reg = <0x00104D15>;    /* threshold : 2965 */
-		sx9330,avgbfilt_reg = <0x60600C00>;   /* AVGPOSFILT : 1/256, AVGNEGFILT : 1/2 */
+		sx9330,adcfiltph1_reg = <0x00104B25>;    /* threshold : 2965 */
+		sx9330,avgbfilt_reg = <0x60600E00>;   /* AVGPOSFILT : 1/256, AVGNEGFILT : 1/2 */
 		sx9330,avgafilt_reg = <0x00000000>;
 		sx9330,advdig3_reg = <0x00000000>;
 		sx9330,advdig4_reg = <0x00000000>;
@@ -2751,7 +2752,7 @@
 	};
 	ext_bin_16: ext-bin@10 {
 		status = "okay";
-		samsung,name = "APDVTX_AUDIO_SLSI.bin";
+		samsung,name = "APTV_AUDIO_SLSI.bin";
 		samsung,area = <1>;
 		samsung,offset = <0x7b6000>;
 	};
@@ -2760,6 +2761,12 @@
 		samsung,name = "APSV_AUDIO_SLSI.bin";
 		samsung,area = <1>;
 		samsung,offset = <0x7bc000>;
+	};
+	ext_bin_18: ext-bin@12 {
+		status = "okay";
+		samsung,name = "txse3.bin";
+		samsung,area = <1>;
+		samsung,offset = <0x1800000>;
 	};
 };
 
