--- a/arch/arm64/boot/dts/samsung/exynos9820-inputbooster.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9820-inputbooster.dtsi
@@ -16,217 +16,508 @@
 			input_booster {
 				status = "okay";
 				compatible = "input_booster";
+				max_resource_count = "7";
 				#address-cells = <1>;
 				#size-cells = <0>;
 
+				/* < CLUSTER2, CLUSTER1, CLUSTER0, MIF, INT, HMP, UCC> */
+				ib_release_values = "0,0,0,0,0,0,0";
+
 				booster_key@1 {
-					input_booster,label = "KEY";
+					input_booster,label = "key";
 					input_booster,type = <0>;	/* BOOSTER_DEVICE_KEY */
 
-					input_booster,levels = <1>;
-
-					/* Frequency table */
-					/* for level	:	1_Head */
-					input_booster,cpu2_freqs = <0>;
-					input_booster,cpu1_freqs = <1404000>;
-					input_booster,hmp_boost = <1>;
-					input_booster,kfc_freqs = <0>;
-					input_booster,mif_freqs = <0>;
-					input_booster,int_freqs = <0>;
-					input_booster,dma_latency = <0>;
-
 					/* Time table */
-					input_booster,head_times = <500>;
-					input_booster,tail_times = <500>;
-					input_booster,phase_times = <0>;
+					input_booster,head_time = <500>;
+					input_booster,tail_time = <500>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 0>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <0 0>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 0>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 0>;
+						};
+					};
 				};
 				booster_key@2 {
-					input_booster,label = "TOUCHKEY";
+					input_booster,label = "touchkey";
 					input_booster,type = <1>;	/* BOOSTER_DEVICE_TOUCHKEY */
 
-					input_booster,levels = <1>;
-
-					/* Frequency table */
-					/* for level	:	1_Head */
-					input_booster,cpu2_freqs = <0>;
-					input_booster,cpu1_freqs = <1404000>;
-					input_booster,hmp_boost = <1>;
-					input_booster,kfc_freqs = <0>;
-					input_booster,mif_freqs = <0>;
-					input_booster,int_freqs = <0>;
-					input_booster,dma_latency = <0>;
-
 					/* Time table */
-					input_booster,head_times = <0>;
-					input_booster,tail_times = <200>;
-					input_booster,phase_times = <0>;
+					input_booster,head_time = <0>;
+					input_booster,tail_time = <200>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 0>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <0 0>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 0>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 0>;
+						};
+					};
 				};
 				booster_key@3 {
-					input_booster,label = "TOUCH";
+					input_booster,label = "touch";
 					input_booster,type = <2>;	/* BOOSTER_DEVICE_TOUCH */
 
-					input_booster,levels = <1 2 3>;
-
-					/* Frequency table */
-					/* for level	:	1_Head, 2_Head, 2_Tail */
-					input_booster,cpu2_freqs = <819000 819000 624000>;
-					input_booster,cpu1_freqs = <1222000 1222000 962000>;
-					input_booster,hmp_boost = <1 1 1>;
-					input_booster,kfc_freqs = <806000 806000 806000>;
-					input_booster,mif_freqs = <1014000 1014000 1014000>;
-					input_booster,int_freqs = <0 0 0>;
-					input_booster,dma_latency = <0 0 0>;
-
 					/* Time table */
-					input_booster,head_times = <130 130 0>;
-					input_booster,tail_times = <0 0 500>;
-					input_booster,phase_times = <0 0 0>;
+					input_booster,head_time = <130>;
+					input_booster,tail_time = <500>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <819000 624000>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1222000 962000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <1014000 1014000>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@4 { // Input Booster +
-					input_booster,label = "MULTITOUCH";
+					input_booster,label = "multitouch";
 					input_booster,type = <3>;	/* BOOSTER_DEVICE_MULTITOUCH */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <819000 624000>;
-					input_booster,cpu1_freqs = <1222000 962000>;
-					input_booster,hmp_boost = <1 1>;
-					input_booster,kfc_freqs = <806000 806000>;
-					input_booster,mif_freqs = <1014000 1014000>;
-					input_booster,int_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <1000 0>;
-					input_booster,tail_times = <0 500>;
-					input_booster,phase_times = <0 0>;
+					input_booster,head_time = <1000>;
+					input_booster,tail_time = <500>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <819000 624000>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1222000 962000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <1014000 1014000>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@5 {
-					input_booster,label = "KEYBOARD";
+					input_booster,label = "keyboard";
 					input_booster,type = <4>;	/* BOOSTER_DEVICE_KEYBOARD */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <0 0>;
-					input_booster,cpu1_freqs = <1404000 1404000>;
-					input_booster,hmp_boost = <1 1>;
-					input_booster,kfc_freqs = <806000 806000>;
-					input_booster,mif_freqs = <0 0>;
-					input_booster,int_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <130 130>;
-					input_booster,tail_times = <0 0>;
-					input_booster,phase_times = <0 0>;
+					input_booster,head_time = <130>;
+					input_booster,tail_time = <0>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 1404000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@6 {
-					input_booster,label = "MOUSE";
+					input_booster,label = "mouse";
 					input_booster,type = <5>;	/* BOOSTER_DEVICE_MOUSE */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <0 0>;			
-					input_booster,cpu1_freqs = <1404000 1222000>;
-					input_booster,hmp_boost = <1 1>;
-					input_booster,kfc_freqs = <806000 806000>;
-					input_booster,mif_freqs = <0 0>;
-					input_booster,int_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <130 0>;
-					input_booster,tail_times = <0 500>;
-					input_booster,phase_times = <0 0>;
+					input_booster,head_time = <130>;
+					input_booster,tail_time = <500>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 1222000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@7 {
-					input_booster,label = "MOUSE WHEEL";
+					input_booster,label = "mouse_wheel";
 					input_booster,type = <6>;	/* BOOSTER_DEVICE_MOUSE */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <0 0>;			
-					input_booster,cpu1_freqs = <1404000 0>;
-					input_booster,hmp_boost = <1 0>;
-					input_booster,kfc_freqs = <806000 0>;
-					input_booster,mif_freqs = <0 0>;
-					input_booster,int_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <130 0>;
-					input_booster,tail_times = <0 0>;
-					input_booster,phase_times = <0 0>;
+					input_booster,head_time = <130>;
+					input_booster,tail_time = <0>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 0>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 0>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 0>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@8 {
-					input_booster,label = "PEN HOVER";
+					input_booster,label = "pen_hover";
 					input_booster,type = <7>;	/* BOOSTER_DEVICE_MOUSE */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <0 0>;			
-					input_booster,cpu1_freqs = <1404000 1222000>;
-					input_booster,hmp_boost = <1 1>;
-					input_booster,kfc_freqs = <806000 806000>;
-					input_booster,mif_freqs = <0 0>;
-					input_booster,int_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <130 0>;
-					input_booster,tail_times = <0 500>;
-					input_booster,phase_times = <0 0>;
+					input_booster,head_time = <130>;
+					input_booster,tail_time = <500>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * INT's ID & Index      : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1404000 1222000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "int";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
 				booster_key@9 {
-					input_booster,label = "PEN";
+					input_booster,label = "pen";
 					input_booster,type = <8>;	/* BOOSTER_DEVICE_MOUSE */
 
-					input_booster,levels = <1 2>;
-
-					/* Frequency table */
-					/* for level	:	1_Head 2_Tail*/
-					input_booster,cpu2_freqs = <0 0>;			
-					input_booster,cpu1_freqs = <1508000 1222000>;
-					input_booster,hmp_boost = <1 1>;
-					input_booster,kfc_freqs = <806000 806000>;
-					input_booster,bimc_freqs = <0 0>;
-					input_booster,dma_latency = <0 0>;
-
 					/* Time table */
-					input_booster,head_times = <200 0>;
-					input_booster,tail_times = <0 600>;
+					input_booster,head_time = <200>;
+					input_booster,tail_time = <600>;
+
+					/* resource Table Sequentially identified with index
+					 * CLUSTER2's ID & Index : 0
+					 * CLUSTER1's ID & Index : 1
+					 * CLUSTER0's ID & Index : 2
+					 * MIF's ID & Index      : 3
+					 * BIMC's ID & Index     : 4
+					 * HMP's ID & Index      : 5
+					 * UCC's ID & Index      : 6
+					*/
+					inputbooster,resource {
+						compatible = "resource";
+						resource@1 {
+							resource,label = "cluster2";
+							resource,value = <0 0>;
+						};
+
+						resource@2 {
+							resource,label = "cluster1";
+							resource,value = <1508000 1222000>;
+						};
+
+						resource@3 {
+							resource,label = "cluster0";
+							resource,value = <806000 806000>;
+						};
+
+						resource@4 {
+							resource,label = "mif";
+							resource,value = <0 0>;
+						};
+
+						resource@5 {
+							resource,label = "bimc";
+							resource,value = <0 0>;
+						};
+
+						resource@6 {
+							resource,label = "hmp";
+							resource,value = <1 1>;
+						};
+
+						resource@7 {
+							resource,label = "ucc";
+							resource,value = <1 1>;
+						};
+					};
 				};
-				booster_key@10 {
-					input_booster,label = "KEY_TWO";
-					input_booster,type = <9>;	/* BOOSTER_DEVICE_KEY */
-
-					input_booster,levels = <1>;
-
-					/* Frequency table */
-					/* for level	:	1_Head */
-					input_booster,cpu2_freqs = <0 0>;			
-					input_booster,cpu1_freqs = <1508000>;
-					input_booster,hmp_boost = <1>;
-					input_booster,kfc_freqs = <1053000>;
-					input_booster,mif_freqs = <0>;
-					input_booster,int_freqs = <0>;
-					input_booster,dma_latency = <0>;
-
-					/* Time table */
-					input_booster,head_times = <700>;
-					input_booster,tail_times = <700>;
-					input_booster,phase_times = <0>;
-				}; // Input Booster -
 				/* If you need to add new key type, add it this position */
 			};
 		};
