ARM64: boot: dts: samsung: Reorganize and commonize more
Change-Id: I29eecc9ee1cde31732b4e01f06836540453aeac7

--- a/arch/arm64/boot/dts/samsung/exynos9825-f62_swa_ins_02.dts
+++ b/arch/arm64/boot/dts/samsung/exynos9825-f62_swa_ins_02.dts
@@ -11,8 +11,8 @@
 
 /dts-v1/;
 /plugin/;
-#include "../exynos/modem-s5000ap-sipc-pdata.dtsi"
-#include "../exynos/exynos9825-mali_rev2.dtsi"
+#include "modem-s5000ap-sipc-pdata.dtsi"
+#include "exynos9820-mali_rev2.dtsi"
 #include "exynos9825-m62_fingerprint_00.dtsi"
 #include "exynos9825-m62_pm_00.dtsi"
 #include "exynos9825-m62_common.dtsi"
@@ -20,7 +20,7 @@
 #include "exynos9825-sensorhub.dtsi"
 #include "exynos9825-f62_grip_00.dtsi"
 #include "exynos9825-f62_abc.dtsi"
-#include "exynos9825_gpio_config_macros.dtsi"
+#include "exynos_gpio_config_macros.dtsi"
 #include "battery_data_f62-r02.dtsi"
 #include "exynos9825-nfc_00.dtsi"
 / {
