--- a/arch/arm64/boot/dts/samsung/exynos9825-m62_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9825-m62_common.dtsi
@@ -9,11 +9,11 @@
  * published by the Free Software Foundation.
 */
 
-#include "../exynos/exynos9825-display-lcd.dtsi"
-#include "../exynos/exynos9825-universal9825_if-pmic-max77705.dtsi"
+#include "exynos9825-display-lcd.dtsi"
+#include "exynos9825-f62_if-pmic-max77705.dtsi"
 #include <dt-bindings/clock/exynos9820.h>
 #include <dt-bindings/pci/pci.h>
-#include "exynos9825_gpio_config_macros.dtsi"
+#include "exynos_gpio_config_macros.dtsi"
 #include "exynos9825-m62_input_common.dtsi"
 #include "exynos9825-m62_vibrator.dtsi"
 #include "exynos9825-argos.dtsi"
