--- a/arch/arm64/boot/dts/samsung/exynos9825-m62_input_common.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9825-m62_input_common.dtsi
@@ -9,6 +9,8 @@
  * published by the Free Software Foundation.
 */
 
+#include "exynos9820-inputbooster.dtsi"
+
 / {
 	fragment@model {
 		target-path = "/";
@@ -39,519 +41,6 @@
 					gpio-key,wakeup;
 					debounce-interval = <10>;
 				};
-			};
-		};
-	};
-
-	fragment@inputbooster {
-		target-path = "/";
-		__overlay__ {
-			input_booster {
-				status = "okay";
-				compatible = "input_booster";
-				max_resource_count = "7";
-				#address-cells = <1>;
-				#size-cells = <0>;
-
-				/* < CLUSTER2, CLUSTER1, CLUSTER0, MIF, INT, HMP, UCC> */
-				ib_release_values = "0,0,0,0,0,0,0";
-
-				booster_key@1 {
-					input_booster,label = "key";
-					input_booster,type = <0>;	/* BOOSTER_DEVICE_KEY */
-
-					/* Time table */
-					input_booster,head_time = <500>;
-					input_booster,tail_time = <500>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 0>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <0 0>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 0>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 0>;
-						};
-					};
-				};
-				booster_key@2 {
-					input_booster,label = "touchkey";
-					input_booster,type = <1>;	/* BOOSTER_DEVICE_TOUCHKEY */
-
-					/* Time table */
-					input_booster,head_time = <0>;
-					input_booster,tail_time = <200>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 0>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <0 0>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 0>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 0>;
-						};
-					};
-				};
-				booster_key@3 {
-					input_booster,label = "touch";
-					input_booster,type = <2>;	/* BOOSTER_DEVICE_TOUCH */
-
-					/* Time table */
-					input_booster,head_time = <130>;
-					input_booster,tail_time = <500>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <819000 624000>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1222000 962000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <1014000 1014000>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@4 {
-					input_booster,label = "multitouch";
-					input_booster,type = <3>;	/* BOOSTER_DEVICE_MULTITOUCH */
-
-					/* Time table */
-					input_booster,head_time = <1000>;
-					input_booster,tail_time = <500>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <819000 624000>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1222000 962000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <1014000 1014000>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@5 {
-					input_booster,label = "keyboard";
-					input_booster,type = <4>;	/* BOOSTER_DEVICE_KEYBOARD */
-
-					/* Time table */
-					input_booster,head_time = <130>;
-					input_booster,tail_time = <0>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 1404000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@6 {
-					input_booster,label = "mouse";
-					input_booster,type = <5>;	/* BOOSTER_DEVICE_MOUSE */
-
-					/* Time table */
-					input_booster,head_time = <130>;
-					input_booster,tail_time = <500>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 1222000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@7 {
-					input_booster,label = "mouse_wheel";
-					input_booster,type = <6>;	/* BOOSTER_DEVICE_MOUSE */
-
-					/* Time table */
-					input_booster,head_time = <130>;
-					input_booster,tail_time = <0>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 0>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 0>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 0>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@8 {
-					input_booster,label = "pen_hover";
-					input_booster,type = <7>;	/* BOOSTER_DEVICE_MOUSE */
-
-					/* Time table */
-					input_booster,head_time = <130>;
-					input_booster,tail_time = <500>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * INT's ID & Index      : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1404000 1222000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "int";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				booster_key@9 {
-					input_booster,label = "pen";
-					input_booster,type = <8>;	/* BOOSTER_DEVICE_MOUSE */
-
-					/* Time table */
-					input_booster,head_time = <200>;
-					input_booster,tail_time = <600>;
-
-					/* resource Table Sequentially identified with index
-					 * CLUSTER2's ID & Index : 0
-					 * CLUSTER1's ID & Index : 1
-					 * CLUSTER0's ID & Index : 2
-					 * MIF's ID & Index      : 3
-					 * BIMC's ID & Index     : 4
-					 * HMP's ID & Index      : 5
-					 * UCC's ID & Index      : 6
-					*/
-					inputbooster,resource {
-						compatible = "resource";
-						resource@1 {
-							resource,label = "cluster2";
-							resource,value = <0 0>;
-						};
-
-						resource@2 {
-							resource,label = "cluster1";
-							resource,value = <1508000 1222000>;
-						};
-
-						resource@3 {
-							resource,label = "cluster0";
-							resource,value = <806000 806000>;
-						};
-
-						resource@4 {
-							resource,label = "mif";
-							resource,value = <0 0>;
-						};
-
-						resource@5 {
-							resource,label = "bimc";
-							resource,value = <0 0>;
-						};
-
-						resource@6 {
-							resource,label = "hmp";
-							resource,value = <1 1>;
-						};
-
-						resource@7 {
-							resource,label = "ucc";
-							resource,value = <1 1>;
-						};
-					};
-				};
-				/* If you need to add new key type, add it this position */
 			};
 		};
 	};
