ARM64: configs: exynos9820: Disable NPU support
* d2x's recovery.img is getting too big, so disable unused drivers

Change-Id: I52c820597a134811b1e19da2f1f98b245b7dc1f7

--- a/arch/arm64/configs/exynos9820-d2x_defconfig
+++ b/arch/arm64/configs/exynos9820-d2x_defconfig
@@ -1312,8 +1312,7 @@ CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
-CONFIG_EXTRA_FIRMWARE="npu/NPU.bin"
-CONFIG_EXTRA_FIRMWARE_DIR="/lib/firmware"
+CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_ALLOW_DEV_COREDUMP=y
@@ -5425,24 +5424,7 @@ CONFIG_PDIC_PD30=y
 CONFIG_COMBO_REDRIVER_PTN36502=y
 CONFIG_EXYNOS_BTS=y
 CONFIG_EXYNOS9820_BTS=y
-CONFIG_VISION_SUPPORT=y
-CONFIG_VISION_CORE=y
-CONFIG_VISION_UNITTEST=y
-CONFIG_EXYNOS_NPU=y
-CONFIG_EXYNOS_NPU_DRAM_FW_LOG_BUF=y
-CONFIG_EXYNOS_NPU_PUBLISH_NPU_BUILD_VER=y
-CONFIG_EXYNOS_NPU_DEBUG_SRAM_DUMP=y
-# CONFIG_NPU_ZEBU_EMULATION is not set
-CONFIG_NPU_GOLDEN_MATCH=y
-CONFIG_NPU_ZEBU_SYSMMU=y
-CONFIG_FIRMWARE_SRAM_DUMP_DEBUGFS=y
-CONFIG_NPU_INTERFACE=y
-# CONFIG_NPU_LOOPBACK is not set
-CONFIG_NPU_HARDWARE=y
-CONFIG_EXYNOS_SCORE=y
-CONFIG_EXYNOS_SCORE_V3=y
-CONFIG_EXYNOS_IVA=y
-CONFIG_IVA_VER=30
+# CONFIG_VISION_SUPPORT is not set
 CONFIG_SENSORS_SYSFS=y
 CONFIG_SENSORS_SSP=y
 CONFIG_SENSORS_SSP_BBD=y
