ARM64: configs: d1x: Adapt from d1

--- a/arch/arm64/configs/exynos9820-d1x_defconfig
+++ b/arch/arm64/configs/exynos9820-d1x_defconfig
@@ -1294,7 +1294,7 @@ CONFIG_GRO_CELLS=y
 # CONFIG_NET_DEVLINK is not set
 CONFIG_MAY_USE_DEVLINK=y
 CONFIG_HAVE_EBPF_JIT=y
-CONFIG_NETPM=y
+# CONFIG_NETPM is not set
 
 #
 # Device Drivers
@@ -1502,17 +1502,14 @@ CONFIG_MEMORY_STATE_TIME=y
 CONFIG_MCU_IPC=y
 # CONFIG_MCU_IPC_TEST is not set
 CONFIG_SHM_IPC=y
-CONFIG_SEC_SIPC_MODEM_IF=y
+# CONFIG_SEC_SIPC_MODEM_IF is not set
 CONFIG_SEC_MODEM_S5000AP=y
-# CONFIG_SEC_MODEM_S5100 is not set
+CONFIG_SEC_MODEM_S5100=y
 # CONFIG_SEC_MODEM_SS310AP is not set
-
-#
-# Configuration Description
-#
-# CONFIG_BOOT_DEVICE_SPI is not set
+CONFIG_BOOT_DEVICE_SPI=y
 # CONFIG_LINK_DEVICE_MEMORY is not set
-# CONFIG_LINK_POWER_MANAGEMENT is not set
+CONFIG_LINK_POWER_MANAGEMENT=y
+# CONFIG_LINK_POWER_MANAGEMENT_WITH_FSM is not set
 # CONFIG_LINK_DEVICE_WITH_SBD_ARCH is not set
 CONFIG_LINK_DEVICE_NAPI=y
 CONFIG_CP_ZEROCOPY=y
@@ -1523,11 +1520,11 @@ CONFIG_CP_PKTPROC=y
 # CONFIG_LINK_DEVICE_LLI is not set
 CONFIG_LINK_DEVICE_SHMEM=y
 # CONFIG_LINK_DEVICE_HSIC is not set
-# CONFIG_LINK_DEVICE_PCIE is not set
+CONFIG_LINK_DEVICE_PCIE=y
 # CONFIG_LTE_MODEM_XMM7260 is not set
 # CONFIG_UMTS_MODEM_SS310AP is not set
 CONFIG_UMTS_MODEM_S5000AP=y
-# CONFIG_UMTS_MODEM_S5100 is not set
+CONFIG_UMTS_MODEM_S5100=y
 # CONFIG_DEBUG_PKTLOG is not set
 # CONFIG_LINK_CONTROL_MSG_IOSM is not set
 CONFIG_CP_SECURE_BOOT=y
@@ -1538,7 +1535,12 @@ CONFIG_MODEM_IF_QOS=y
 CONFIG_MODEM_IF_NET_GRO=y
 CONFIG_CP_ETDAC_OTP_WA=y
 # CONFIG_KLAT is not set
-# CONFIG_SEC_SIPC_DUAL_MODEM_IF is not set
+CONFIG_SEC_SIPC_DUAL_MODEM_IF=y
+
+#
+# Configuration Description
+#
+CONFIG_CP_PKTPROC_V2=y
 CONFIG_TZDEV=y
 # CONFIG_TZDEV_SK_PFNS_64BIT is not set
 CONFIG_TZDEV_USE_ARM_CALLING_CONVENTION=y
@@ -1580,7 +1582,7 @@ CONFIG_MUIC_MAX77705_CCIC=y
 CONFIG_HICCUP_CHARGER=y
 # CONFIG_USE_SECOND_MUIC is not set
 # CONFIG_MUIC_SM5508 is not set
-# CONFIG_MUIC_UART_SWITCH is not set
+CONFIG_MUIC_UART_SWITCH=y
 # CONFIG_IFCONN_MANAGER is not set
 # CONFIG_IFCONN_NOTIFIER is not set
 # CONFIG_IFCONN_SUPPORT_THREAD is not set
