ARM64: boot: dts: Exynos9825: Fine tune mali dvfs table
* exynos9825 specific files were missed in fda9c034a2df1b137abe0e2bf22ebab721dacbf9

Change-Id: Ia6a95224bb45fc26100f7389599158c60951504d

--- a/arch/arm64/boot/dts/samsung/exynos9820-mali.dtsi
+++ b/arch/arm64/boot/dts/samsung/exynos9820-mali.dtsi
@@ -12,19 +12,19 @@
 &mali {
 	interactive_info = <260000 94 0>;
 	gpu_dvfs_table_size = <9 8>; /*<row col>*/
-	/*  8 columns      freq  down   up  stay  mif    little  middle   big  */
-	gpu_dvfs_table = <  702000    78  100   9  2093000 1456000       0 1820000
-		                650000    78   98   5  2093000 1456000       0 2080000
-		                572000    78   98   5  1794000       0       0       0
-		                433000    78   95   1  1352000       0       0       0
-		                377000    78   90   1  1352000       0       0       0
-		                325000    78   85   1  1014000       0       0       0
-		                260000    78   85   1   676000       0       0       0
-		                200000    78   85   1   676000       0       0       0
-		                156000     0   85   1   676000       0       0       0 >;
+	/*  8 columns       freq      down up stay  mif    little    middle   big  */
+	gpu_dvfs_table = <  702000     90  95  1   2093000       0       0       0
+	                    650000     80  90  1   2093000       0       0       0
+	                    572000     70  80  1   1794000       0       0       0
+	                    433000     60  70  1   1352000       0       0       0
+	                    377000     50  60  1   1352000       0       0       0
+	                    325000     40  50  1   1014000       0       0       0
+	                    260000     30  40  1    676000       0       0       0
+	                    200000     20  30  1    676000       0       0       0
+	                    156000     0   0   1    676000       0       0       0 >;
 	gpu_max_clock = <702000>;
 	gpu_max_clock_limit = <702000>;
 	gpu_min_clock = <156000>;
-	gpu_dvfs_start_clock = <260000>;
+	gpu_dvfs_start_clock = <156000>;
 	gpu_dvfs_bl_config_clock = <156000>;
 };
