--- a/arch/arm64/configs/exynos9820-beyond1lte_defconfig
+++ b/arch/arm64/configs/exynos9820-beyond1lte_defconfig
@@ -37,6 +37,11 @@ CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARCH_PROC_KCORE_TEXT=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
+CONFIG_KPROFILES=y
+CONFIG_KP_DEFAULT_MODE=2
+CONFIG_AUTO_KPROFILES=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
 
