--- a/arch/arm64/configs/exynos9820-d1_defconfig
+++ b/arch/arm64/configs/exynos9820-d1_defconfig
@@ -36,6 +36,11 @@ CONFIG_PGTABLE_LEVELS=3
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_ARCH_PROC_KCORE_TEXT=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
+CONFIG_KPROFILES=y
+CONFIG_KP_DEFAULT_MODE=2
+CONFIG_AUTO_KPROFILES=y
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
